[gd_scene load_steps=10 format=3 uid="uid://cknr4gge4xhru"]

[ext_resource type="Script" uid="uid://tiiy4inh4lkp" path="res://scenes/user_interface/loot_container_display.gd" id="1_pwn2l"]
[ext_resource type="StyleBox" uid="uid://cufnsrdqowsqx" path="res://scenes/user_interface/ui_panel.tres" id="2_i2rid"]
[ext_resource type="Texture2D" uid="uid://4e6rnnnr4oov" path="res://assets/UIAssets/Window/window_header.png" id="3_c1iij"]
[ext_resource type="FontFile" uid="uid://bri3xj4q5wgj3" path="res://assets/fonts/LibreCaslonText-Bold.ttf" id="4_172ow"]
[ext_resource type="Texture2D" uid="uid://cp8amfr84omxi" path="res://assets/UIAssets/Button Small/button_small.png" id="5_3gnxr"]
[ext_resource type="Texture2D" uid="uid://cvysa856dbwgq" path="res://assets/UIAssets/Button Small/button_small_press.png" id="6_inrb4"]
[ext_resource type="Texture2D" uid="uid://bobnx37rcho1k" path="res://assets/UIAssets/Button Small/button_small_hover.png" id="7_vr02a"]

[sub_resource type="LabelSettings" id="LabelSettings_01bs6"]
font = ExtResource("4_172ow")
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_2eyu3"]
font = ExtResource("4_172ow")
font_size = 26

[node name="LootContainerDisplay" type="CenterContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwn2l")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_i2rid")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleTexture" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_c1iij")
expand_mode = 5
stretch_mode = 4

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/TitleTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Loot Box Name"
label_settings = SubResource("LabelSettings_01bs6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LootAllButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
texture_normal = ExtResource("5_3gnxr")
texture_pressed = ExtResource("6_inrb4")
texture_hover = ExtResource("7_vr02a")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/LootAllButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Take All"
label_settings = SubResource("LabelSettings_2eyu3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
texture_normal = ExtResource("5_3gnxr")
texture_pressed = ExtResource("6_inrb4")
texture_hover = ExtResource("7_vr02a")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"
label_settings = SubResource("LabelSettings_2eyu3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/LootAllButton" to="." method="_on_loot_all_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
